syntax = "proto3";

package cmt.protobuf;

/*
    A request to be sent to the API upon registration of a new tenant. The API should create the tenant's
    database and any necessary infrastructure, returning whether it was entirely sucessful or not.
*/
service CreateTenant {
    rpc Create(TenantCreationRequest) returns(TenantCreationOutcome);
}

message TenantCreationRequest {
    string tenantId = 1; // The GUID of the tenant being created
}

message TenantCreationOutcome {
    bool success = 1; // Whether the tenant's necessary infrastructure was created
}